<resources>
    <string name="app_name">CanardHTTPD</string>

    <string name="action_settings">Settings</string>

    <string name="srv_name">Canard HTTPD Service</string>
    <string name="app_name_monitoring">Activity</string>


    <string name="misc_eula_title">User Licence Agrement</string>
    <string name="misc_eula_accept">Accept</string>
    <string name="misc_eula_refuse">Refuse</string>

    <string name="dont_show_again">Don\'t tell me again</string>

    <string name="BUTTON_server_start">Start</string>
    <string name="BUTTON_server_stop">Stop</string>

    <string name="show_about">Show \'about\' information</string>
    <string name="share_server_info">Share server information</string>
    <string name="add_share">Add something to share list</string>
    <string name="add_collection_share">Add a collection to share list</string>

    <string name="title_half_functionnal">Some functionnality missing…</string>
    <string name="message_READ_EXTERNAL_STORAGE_for_share_manager">Since \'Read External Storage\' permission is not granted, the application won\'t be able to keep track of shared file on external storage upon stop and restart.</string>

    <string name="domain_log">Log</string>
    <string name="domain_activity">Activity</string>

    <string name="domain_shares">Shared file(s)</string>

    <string name="domain_server_status_starting">Starting…</string>
    <string name="domain_server_status_running">Started</string>
    <string name="domain_server_status_halting">Shuting down…</string>
    <string name="domain_server_status_stopped">Down</string>
    <string name="domain_server_status_unknown">Unknown</string>

	<string name="domain_message_severity_error">Error</string>
	<string name="domain_message_severity_warning">Warning</string>
	<string name="domain_message_severity_information">Information</string>
	<string name="domain_message_severity_debug">Debug</string>

    <string name="generic_unknown">Unknown</string>

	<string name="menu_server_toggle">Start/Stop server</string>
    <string name="menu_open_settings">Settings</string>
	<string name="menu_show_log_activity">Log</string>
	<string name="menu_show_activity_activity">Activity</string>
	<string name="menu_share_url">Share Address</string>

	<string name="menu_set_filter_user">Filter user</string>
	<string name="menu_set_filter_event">Filter event</string>
	<string name="menu_set_filter_date">Filter date</string>
	<string name="menu_reset_filters">Reset filters</string>
	<string name="menu_clear_log">Clear logs</string>
	<string name="menu_export_log">Export logs</string>

	<string name="dialog_clear_log_title">Clear logs</string>
	<string name="dialog_clear_log_message">Do you want to clear logs ?</string>
	<string name="dialog_clear_log_action">Clear</string>


	<string name="notification_server_status_no_download">Nothing being downloaded</string>
    <string name="notification_server_status_download_in_progress">%1$d resource(s) being downloaded</string>
    <string name="notification_server_action_finish_then_stop">Stop</string>
    <string name="notification_server_action_kill">Kill</string>

    <string name="title_listen_interface">Listen</string>
    <string name="title_share_address">Share Server Address</string>
	<string name="intent_object_share_server_address">Address of my Canard HTTPD server</string>
	<string name="intent_content_share_server_address">Follow this link to access my CanardHTTPD server : {{server.url}}</string>

	<string name="intent_object_share_resource_address">Link to resource</string>
	<string name="intent_content_share_resource_address">Follow this link to access to the resource : {{resource.url}}</string>
	<string name="intent_object_share_unknown_resource_address">Link to {{resource.name}}</string>
	<string name="intent_content_share_unknown_resource_address">Follow this link to access to {{resource.name}} : {{resource.url}}</string>

	<string name="dialog_confirmation_remove_share_title">Share removal</string>
	<string name="dialog_confirmation_remove_share_text">Do you want to remove \'%s\' ?</string>
	<string name="dialog_confirmation_remove_share_action_button">Remove</string>


	<string name="notification_server_running_on">Server started</string>
    <string name="notification_server_stopped">Server stopped</string>

    <string name="title_pick_file_to_share">Choose what to share</string>

    <string name="no_activity_for_picking_file_or_directory">Unable to find file/directory chooser application</string>

    <string name="title_share_server_info">Share Web Server Access</string>
    <string name="title_share_sharedtext_url">Share text URL</string>
    <string name="title_share_sharedfile_url">Share file URL</string>
    <string name="title_share_sharedfolder_url">Share folder URL</string>
    <string name="title_share_sharedfolder_url_zip">Share zipped folder URL</string>

    <string name="error_title_share_failure">Failed to share</string>
    <string name="error_failed_to_share_aleady_shared">This is already shared</string>
    <string name="error_failed_to_share_this_file_type">Cannot share this kind of file</string>


    <string name="error_failed_server_start">Failed to start server</string>
    <string name="error_failed_server_stop">Failed to stop server</string>
    <string name="error_failed_server_status">Failed to get server\'s status</string>
    <string name="error_failed_server_unknown_operation">Failed to \'manipulate\' server</string>
    <string name="error_server_disconnection">Lost connection to server</string>
    <string name="error_explain__could_not_bind">Could no bind port %d. Maybe some other process is already listening on this port.</string>
    <string name="error_explain__error_unknown_server_error">An unexpected error occurred.</string>

    <string name="error_activity_param_null_mime_type">Unable to guess type of element to share.</string>
    <string name="error_activity_param_unknown_mime_type">Don\'t know how to share this kind of file</string>
    <string name="error_file_already_shared">File is already shared.</string>
    <string name="error_file_not_shared">File is not shared.</string>



	<!-- ***************** -->
	<!-- Event Log message -->
	<!-- ***************** -->

	<string name="eventlog_UNDEFINED_MAIN_ACTIVITY_PROBLEM">Undefined application problem</string>
	<string name="eventlog_UNDEFINED_WEB_SERVER_PROBLEM">Undefined server problem</string>

	<string name="eventlog_SERVER_START_REQUESTED">Starting server...</string>
	<string name="eventlog_SERVER_STARTED">Server started</string>
	<string name="eventlog_SERVER_START_FAILED">Failed to start server</string>
	<string name="eventlog_SERVER_STOP_REQUESTED">Stoping server...</string>
	<string name="eventlog_SERVER_STOPPED">Server stopped</string>
	<string name="eventlog_SERVER_STOP_FAILED">Failed to stop server</string>

	<string name="eventlog_WEBUSER_REQUESTED_FORBIDEN_RESOURCE">Forbidden resource \'%1$s\' request</string>
	<string name="eventlog_WEBUSER_REQUESTED_UNKOWN_RESOURCE">Unknown resource \'%1$s\' request</string>
	<string name="eventlog_WEBUSER_DOWNLOAD_STARTED">Start download of \'%1$s\'</string>
	<string name="eventlog_WEBUSER_DOWNLOAD_COMPLETED">Complete download of \'%1$s\' in \'%2$s\'</string>
	<string name="eventlog_WEBUSER_DOWNLOAD_WAS_CANCELLED">Cancel download of \'%1$s\'</string>
	<string name="eventlog_WEBUSER_DOWNLOAD_FAILED">Download of \'%1$s\' failed : %2$s</string>

	<string name="eventlog_USER_ADDED_RESOURCE">Resource \'%1$s\' added</string>
	<string name="eventlog_USER_REMOVED_RESOURCE">Resource \'%1$s\' removed</string>
	<string name="eventlog_USER_ADD_RESOURCE_DENIED_BECAUSE_DUPLICATED">Duplicate resource \'%1$s\' not added</string>


	<!-- *********** -->
	<!-- Preferences -->
	<!-- *********** -->

	<!-- Main UI -->

	<string name="preferences_main_ui">Main</string>
	<string name="explain_preferences_main_ui">Preferences for the control page</string>

	<string name="preferences_main_ui_show_address_and_share_button">Share buttons and URL</string>
	<string name="explain_preferences_main_ui_show_address_and_share_button">Enable this to make the Log button and the Activity accessible on the main page</string>

	<string name="preferences_main_ui_show_log_and_activity_buttons">Log and Activity buttons</string>
	<string name="explain_preferences_main_ui_show_log_and_activity_buttons">Enable this to make the Log button and the Activity accessible on the main page</string>

	<!-- Server Access -->

	<string name="preferences_server_access">Server access</string>
	<string name="explain_preferences_server_access">Choose by who and how the web server can be accessed</string>

	<string name="preferences_find_out_external_ip">Find out external IP</string>
	<string name="explain_preferences_find_out_external_ip">Try to find out the external IP of your phone. It will requiere you device to have access to internet.</string>

	<!-- Share Intent -->

	<string name="preferences_share_intent">Share Action</string>
	<string name="explain_preferences_share_intent">Preferences when called as a share action</string>

	<string name="preferences_share_show_main_ui">Show main page</string>
	<string name="explain_preferences_share_show_main_ui">Show main page upon share. If disabled, then it will be automatically published.</string>

	<string name="preferences_share_publish_file_automatically">Publish file automatically</string>
	<string name="explain_preferences_share_publish_file_automatically">Uncheck if you want to review the shared file before its publication</string>

	<string name="preferences_share_publish_text_automatically">Publish text automatically</string>
	<string name="explain_preferences_share_publish_text_automatically">Uncheck if you want to review shared text before its publication</string>


</resources>
